crates/plotnik-tests/tests/02-parser/recovery_validation/error_with_children.txt
Q = (ERROR (something))
------------------ DIAGNOSTICS -------------------
error: `(ERROR)` cannot have children
 --> query.ptk:1:12
  |
1 | Q = (ERROR (something))
  |            ^^^^^^^^^^^
  |
help: remove the children
  |
1 - Q = (ERROR (something))
1 + Q = (ERROR )
  |
help: `(ERROR)` matches any error node as a leaf. Use `MISSING` when matching a token inserted by parser recovery
